[gd_scene load_steps=4 format=3 uid="uid://d12tyfkvb4luu"]

[ext_resource type="Script" uid="uid://c818u2lnv3rnd" path="res://Scripts/PlayerChar/player_char.gd" id="1_2bvri"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_t3hp8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_8vni7"]

[node name="PlayerCharacterBody" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_2bvri")

[node name="PlayerHurtbox" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_t3hp8")

[node name="CoyoteTimer" type="Timer" parent="."]

[node name="SlideCooldownTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="GrappleCooldownTimer" type="Timer" parent="."]

[node name="Head" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
fov = 90.0

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D"]
target_position = Vector3(0, 0, -25)
debug_shape_custom_color = Color(1, 0, 1, 1)

[node name="WallRunShapeCast" type="ShapeCast3D" parent="."]
transform = Transform3D(1.3, 0, 0, 0, 0.5, 0, 0, 0, 1.3, 0, 0.556993, 0)
shape = SubResource("BoxShape3D_8vni7")

[node name="GroundingRayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(0.999848, -0.0174524, 7.62869e-10, 0, -4.37114e-08, -1, 0.0174524, 0.999848, -4.37047e-08, 0, -1, 0)
target_position = Vector3(0, 0, 0.5)
debug_shape_custom_color = Color(1, 0, 1, 1)

[connection signal="timeout" from="SlideCooldownTimer" to="." method="_on_slide_cooldown_timer_timeout"]
[connection signal="timeout" from="GrappleCooldownTimer" to="." method="_on_grapple_cooldown_timer_timeout"]
